--- a/API-Web-Data-Viz/public/dashboard/comparacao.html
+++ b/API-Web-Data-Viz/public/dashboard/comparacao.html
@@ -244,7 +244,7 @@
 						}
 
 						window.chartInstance = new Chart(ctx, {
-							type: 'line',
+							type: 'bar',
 							data: {
 								labels: labels,
 								datasets: [
