Ajuste nos links de redirecionamento

--- a/API-Web-Data-Viz/public/dashboard/mainPage.html
+++ b/API-Web-Data-Viz/public/dashboard/mainPage.html
@@ -33,7 +33,7 @@
 			<div class="header">
 				<header>
 					<div class="itemsHeader">
-						<h4><a href="../index.html">INICIO</a></h4>
+						<h4><a href="../index.html">INÍCIO</a></h4>
 						<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 						<h4>||</h4>
 						<div class="botao">
