--- a/API-Web-Data-Viz/public/dashboard/comparacao.html
+++ b/API-Web-Data-Viz/public/dashboard/comparacao.html
@@ -33,7 +33,7 @@
 			<div class="header">
 				<header>
 					<div class="itemsHeader">
-						<h4><a href="../index.html">INICIO</a></h4>
+						<h4><a href="../index.html">INÍCIO</a></h4>
 						<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 						<h4>||</h4>
 						<div class="botao">
@@ -41,7 +41,7 @@
 						<nav class="menu">
 							<ul> <br> <br>
 								<li><a href="#">Perfil</a></li> <br>
-								<li><a href="#">Configurações</a></li> <br>
+								<li><a href="config.html">Suporte</a></li> <br>
 								<li><a href="../login.html">Sair</a></li> <br>
 							</ul>
 						</nav>
