--- a/API-Web-Data-Viz/public/dashboard/config.html
+++ b/API-Web-Data-Viz/public/dashboard/config.html
@@ -19,7 +19,7 @@
 		<header>
 			<a href="index.html"><img class="icone1" src="../css/img/icone.png" alt="Logo da Empresa"></a>
 			<div class="itemsHeader">
-				<h4><a href="../dashboard/mainPage.html">INICIO</a></h4>
+				<h4><a href="../dashboard/mainPage.html">INÍCIO</a></h4>
 				<h4><a href="../index.html#sobre-nos">SOBRE NÓS</a></h4>
 				<h4>||</h4>
 				<div class="botao">
@@ -44,7 +44,7 @@
 				<div class="card">
 					<h2>Help Desk</h2>
 					<p>Abrir um chamado no Jira é simples. Os usuários podem facilmente registrar problemas e acompanhar sua resolução.</p>
-					<a href="#" class="card-button">Clique Aqui</a>
+					<a href="https://transcontrol.atlassian.net/servicedesk/customer/portals" class="card-button">Clique Aqui</a>
 				</div>
 
 				<div class="card2">
